--- a/ieclub-backend/.env.example
+++ b/ieclub-backend/.env.example
@@ -99,3 +99,58 @@ MATCH_MIN_SCORE=0.6
 
 # ==================== Sentry 配置 ====================
 SENTRY_DSN=
+
+# ==================== 新增配置 ====================
+
+# 邮件服务（用于通知）
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USER=your-email@example.com
+SMTP_PASS=your-password
+
+# 短信服务（可选）
+SMS_PROVIDER=aliyun
+SMS_ACCESS_KEY_ID=your-key
+SMS_ACCESS_KEY_SECRET=your-secret
+
+# 第三方登录（可选）
+GITHUB_CLIENT_ID=your-github-client-id
+GITHUB_CLIENT_SECRET=your-github-client-secret
+
+# 性能监控
+APM_SERVER_URL=http://localhost:8200
+APM_SECRET_TOKEN=your-apm-token
+
+# 健康检查增强配置
+HEALTH_CHECK_DB=true
+HEALTH_CHECK_REDIS=true
+HEALTH_CHECK_DISK=true
+HEALTH_CHECK_MEMORY=true
+
+# 数据备份配置
+BACKUP_ENABLED=true
+BACKUP_DIR=/var/backups/ieclub
+BACKUP_RETENTION_DAYS=30
+BACKUP_CRON_SCHEDULE=0 2 * * *
+
+# WebSocket 配置
+WS_ENABLED=true
+WS_PORT=3001
+WS_PING_INTERVAL=30000
+WS_PING_TIMEOUT=5000
+
+# 高级限流配置
+ADVANCED_RATE_LIMIT=true
+RATE_LIMIT_USER_REQUESTS=100
+RATE_LIMIT_IP_REQUESTS=50
+RATE_LIMIT_SENSITIVE_REQUESTS=10
+
+# 安全配置
+SECURITY_HEADERS=true
+CSRF_PROTECTION=false
+HELMET_CONFIGURED=true
+
+# 监控和告警
+MONITORING_ENABLED=true
+ALERT_WEBHOOK_URL=
+ALERT_EMAIL_RECIPIENTS=
