--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,83 +9,64 @@ on:
 jobs:
   test-backend:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [18.x, 20.x]
+
     steps:
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: 'ieclub-backend/package-lock.json'
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v4
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+        cache-dependency-path: ieclub-backend/package-lock.json
 
-      - name: Install backend dependencies
-        run: cd ieclub-backend && npm ci
+    - name: Install backend dependencies
+      run: |
+        cd ieclub-backend
+        npm ci
 
-      - name: Run backend linting
-        run: cd ieclub-backend && npm run lint --if-present || npx eslint src/ --ext .js
+    - name: Run backend linting
+      run: |
+        cd ieclub-backend
+        npm run lint
 
-      - name: Run backend tests
-        run: cd ieclub-backend && npm test --if-present || echo "No tests configured"
-
-      - name: Build backend (if applicable)
-        run: cd ieclub-backend && npm run build --if-present || echo "No build step configured"
+    - name: Run backend tests
+      run: |
+        cd ieclub-backend
+        npm test
 
   test-frontend:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [18.x, 20.x]
+
     steps:
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: 'ieclub-taro/package-lock.json'
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v4
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+        cache-dependency-path: ieclub-taro/package-lock.json
 
-      - name: Install frontend dependencies
-        run: cd ieclub-taro && npm ci
+    - name: Install frontend dependencies
+      run: |
+        cd ieclub-taro
+        npm ci
 
-      - name: Run frontend linting
-        run: cd ieclub-taro && npm run lint --if-present || npx eslint src/ --ext .ts,.tsx,.js,.jsx
+    - name: Run frontend linting
+      run: |
+        cd ieclub-taro
+        npm run lint
 
-      - name: Build frontend
-        run: cd ieclub-taro && npm run build:h5 --if-present || npm run build --if-present || echo "Build command not configured"
-
-  security-scan:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: Run security audit for backend
-        run: |
-          cd ieclub-backend && npm audit --production --audit-level moderate || echo "Security issues found but continuing"
-
-      - name: Run security audit for frontend
-        run: |
-          cd ieclub-taro && npm audit --production --audit-level moderate || echo "Security issues found but continuing"
-
-  docker-build:
-    runs-on: ubuntu-latest
-    needs: [test-backend, test-frontend]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Build backend Docker image
-        run: docker build -t ieclub-backend:${{ github.sha }} ./ieclub-backend
-
-      - name: Build frontend Docker image
-        run: docker build -t ieclub-frontend:${{ github.sha }} ./ieclub-taro
-
-      - name: Test Docker images
-        run: |
-          docker run --rm ieclub-backend:${{ github.sha }} npm run healthcheck || echo "Healthcheck not available"
+    - name: Build frontend
+      run: |
+        cd ieclub-taro
+        npm run build:h5
