--- a/ieclub-backend/.prettierrc
+++ b/ieclub-backend/.prettierrc
@@ -1,12 +1,8 @@
 {
   "semi": true,
-  "trailingComma": "es5",
   "singleQuote": true,
-  "printWidth": 100,
   "tabWidth": 2,
-  "useTabs": false,
-  "bracketSpacing": true,
-  "bracketSameLine": false,
-  "arrowParens": "avoid",
-  "endOfLine": "lf"
+  "trailingComma": "es5",
+  "printWidth": 100,
+  "arrowParens": "always"
 }
