--- a/ieclub-taro/.prettierrc
+++ b/ieclub-taro/.prettierrc
@@ -2,11 +2,5 @@
   "semi": false,
   "singleQuote": true,
   "printWidth": 100,
-  "tabWidth": 2,
-  "useTabs": false,
-  "bracketSpacing": true,
-  "bracketSameLine": false,
-  "arrowParens": "avoid",
-  "endOfLine": "lf",
-  "trailingComma": "es5"
+  "tabWidth": 2
 }
