--- a/ieclub-backend/.env.example
+++ b/ieclub-backend/.env.example
@@ -4,7 +4,7 @@ PORT=3000
 API_VERSION=v1
 
 # ==================== 数据库配置 ====================
-DATABASE_URL="mysql://ieclub_user:kE7pCg$r@W9nZ!sV2@127.0.0.1:3306/ieclub"
+DATABASE_URL="mysql://ieclub_user:your-database-password@127.0.0.1:3306/ieclub"
 
 # ==================== Redis 配置 ====================
 REDIS_HOST=localhost
