--- a/ieclub-taro/.env.beta
+++ b/ieclub-taro/.env.beta
@@ -12,7 +12,7 @@ TARO_APP_VERSION=2.0.0-beta
 TARO_APP_DESCRIPTION=智能话题广场 (内测版)
 
 # 微信小程序配置
-TARO_APP_WEAPP_APPID=wxf6389db55319e51c
+TARO_APP_WEAPP_APPID=${WECHAT_MINIPROGRAM_APPID:-wxf6389db55319e51c}
 
 # 构建配置
 TARO_APP_BUILD_ENV=beta
