--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,37 @@
+# IEClub 项目环境变量配置示例
+# 请复制此文件为 .env 并填入真实的值
+
 # ==================== 基础配置 ====================
 NODE_ENV=development
 PORT=3000
 API_VERSION=v1
 
 # ==================== 数据库配置 ====================
-DATABASE_URL="mysql://ieclub_user:${DB_PASSWORD:-kE7pCg$r@W9nZ!sV2}@127.0.0.1:3306/ieclub"
+DB_PASSWORD=你的数据库密码
 
 # ==================== Redis 配置 ====================
-REDIS_HOST=${REDIS_HOST:-localhost}
-REDIS_PORT=${REDIS_PORT:-6379}
-REDIS_PASSWORD=${REDIS_PASSWORD:-W24BUwD4vnEcfMpXoMqv}
-REDIS_DB=${REDIS_DB:-0}
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=你的Redis密码
+REDIS_DB=0
 
 # ==================== JWT 配置 ====================
-JWT_SECRET=${JWT_SECRET:-vXroGJ1DzqbM8MreoogKfvdfvdcs12eeb}
-JWT_EXPIRES_IN=${JWT_EXPIRES_IN:-7d}
-JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET:-EaCp3XnU2Eh5E1H6BoWpdfvdf13evfvf324}
-JWT_REFRESH_EXPIRES_IN=${JWT_REFRESH_EXPIRES_IN:-30d}
+JWT_SECRET=你的JWT密钥（至少32位随机字符串）
+JWT_EXPIRES_IN=7d
+JWT_REFRESH_SECRET=你的JWT刷新密钥（至少32位随机字符串）
+JWT_REFRESH_EXPIRES_IN=30d
 
 # ==================== 微信小程序配置 ====================
-WECHAT_APPID=${WECHAT_APPID:-wxf6389db55319e51c}
-WECHAT_SECRET=${WECHAT_SECRET:-8e1e41486bdc645094141fc357945616}
+WECHAT_APPID=你的微信小程序APPID
+WECHAT_SECRET=你的微信小程序SECRET
 
 # ==================== 阿里云 OSS 配置 ====================
 OSS_REGION=oss-cn-hangzhou
-OSS_ACCESS_KEY_ID=your-access-key-id
-OSS_ACCESS_KEY_SECRET=your-access-key-secret
-OSS_BUCKET=ieclub-files
-OSS_ENDPOINT=oss-cn-hangzhou.aliyuncs.com
-OSS_CDN_DOMAIN=https://cdn.ieclub.com
+OSS_ACCESS_KEY_ID=你的OSS访问密钥ID
+OSS_ACCESS_KEY_SECRET=你的OSS访问密钥秘钥
+OSS_BUCKET=你的OSS存储桶名称
+OSS_ENDPOINT=你的OSS端点
+OSS_CDN_DOMAIN=你的CDN域名
 
 # ==================== 文件上传限制 ====================
 MAX_IMAGE_SIZE=5242880
@@ -98,4 +101,26 @@ MATCH_SCORE_LOCATION_WEIGHT=0.2
 MATCH_MIN_SCORE=0.6
 
 # ==================== Sentry 配置 ====================
-SENTRY_DSN=
+SENTRY_DSN=你的Sentry DSN
+
+# ==================== 邮件服务配置 ====================
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USER=your-email@example.com
+SMTP_PASS=你的邮箱密码
+
+# ==================== 短信服务配置 ====================
+SMS_PROVIDER=aliyun
+SMS_ACCESS_KEY_ID=你的短信服务密钥ID
+SMS_ACCESS_KEY_SECRET=你的短信服务密钥秘钥
+
+# ==================== 第三方登录配置 ====================
+GITHUB_CLIENT_ID=你的GitHub客户端ID
+GITHUB_CLIENT_SECRET=你的GitHub客户端秘钥
+
+# ==================== 性能监控配置 ====================
+APM_SERVER_URL=http://localhost:8200
+APM_SECRET_TOKEN=你的APM秘钥
+
+# ==================== Docker配置 ====================
+MYSQL_ROOT_PASSWORD=你的MySQL root密码
