--- a/ieclub-backend/package.json
+++ b/ieclub-backend/package.json
@@ -11,6 +11,10 @@
     "prisma:studio": "prisma studio",
     "prisma:seed": "node prisma/seed.js",
     "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:unit": "jest tests/unit",
+    "test:integration": "jest tests/integration",
+    "test:ci": "jest --ci --coverage --maxWorkers=2",
     "lint": "eslint src/**/*.js",
     "format": "prettier --write \"src/**/*.js\"",
     "docker:build": "docker build -t ieclub-backend .",
