--- a/ieclub-backend/.env.example
+++ b/ieclub-backend/.env.example
@@ -4,23 +4,23 @@ PORT=3000
 API_VERSION=v1
 
 # ==================== 数据库配置 ====================
-DATABASE_URL="mysql://ieclub_user:your-database-password@127.0.0.1:3306/ieclub"
+DATABASE_URL="mysql://ieclub_user:${DB_PASSWORD:-kE7pCg$r@W9nZ!sV2}@127.0.0.1:3306/ieclub"
 
 # ==================== Redis 配置 ====================
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PASSWORD=
-REDIS_DB=0
+REDIS_HOST=${REDIS_HOST:-localhost}
+REDIS_PORT=${REDIS_PORT:-6379}
+REDIS_PASSWORD=${REDIS_PASSWORD:-W24BUwD4vnEcfMpXoMqv}
+REDIS_DB=${REDIS_DB:-0}
 
 # ==================== JWT 配置 ====================
-JWT_SECRET=your-super-secret-jwt-key-here
-JWT_EXPIRES_IN=7d
-JWT_REFRESH_SECRET=your-refresh-secret-key-here
-JWT_REFRESH_EXPIRES_IN=30d
+JWT_SECRET=${JWT_SECRET:-vXroGJ1DzqbM8MreoogKfvdfvdcs12eeb}
+JWT_EXPIRES_IN=${JWT_EXPIRES_IN:-7d}
+JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET:-EaCp3XnU2Eh5E1H6BoWpdfvdf13evfvf324}
+JWT_REFRESH_EXPIRES_IN=${JWT_REFRESH_EXPIRES_IN:-30d}
 
 # ==================== 微信小程序配置 ====================
-WECHAT_APPID=your-wechat-appid
-WECHAT_SECRET=your-wechat-secret
+WECHAT_APPID=${WECHAT_APPID:-wxf6389db55319e51c}
+WECHAT_SECRET=${WECHAT_SECRET:-9dd5bf10a41f1b68b92ba61e4dabbfba}
 
 # ==================== 阿里云 OSS 配置 ====================
 OSS_REGION=oss-cn-hangzhou
