--- a/ieclub-backend/package.json
+++ b/ieclub-backend/package.json
@@ -32,44 +32,45 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.5.2",
+    "@sentry/node": "^7.85.0",
+    "ali-oss": "^6.18.1",
+    "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
+    "bull": "^4.12.0",
+    "cheerio": "^1.0.0-rc.12",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
-    "cors": "^2.8.5",
     "helmet": "^7.1.0",
-    "compression": "^1.7.4",
+    "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "marked": "^11.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "node-schedule": "^2.1.1",
+    "sanitize-html": "^2.11.0",
+    "sharp": "^0.33.0",
+    "socket.io": "^4.6.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
+    "uuid": "^9.0.1",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1",
-    "dotenv": "^16.3.1",
-    "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3",
-    "axios": "^1.6.2",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.33.0",
-    "ali-oss": "^6.18.1",
-    "ioredis": "^5.3.2",
-    "bull": "^4.12.0",
-    "node-schedule": "^2.1.1",
-    "cheerio": "^1.0.0-rc.12",
-    "marked": "^11.0.0",
-    "sanitize-html": "^2.11.0",
-    "uuid": "^9.0.1",
-    "dayjs": "^1.11.10",
-    "lodash": "^4.17.21",
-    "socket.io": "^4.6.0",
-    "@sentry/node": "^7.85.0",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "xss": "^1.0.15"
   },
   "devDependencies": {
-    "prisma": "^5.5.2",
-    "nodemon": "^3.0.2",
+    "@types/node": "^20.10.0",
     "eslint": "^8.54.0",
-    "prettier": "^3.1.0",
     "jest": "^29.7.0",
-    "supertest": "^6.3.3",
-    "@types/node": "^20.10.0"
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.0",
+    "prisma": "^5.5.2",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=18.0.0",
