--- a/ieclub-backend/.env.example
+++ b/ieclub-backend/.env.example
@@ -4,23 +4,23 @@ PORT=3000
 API_VERSION=v1
 
 # ==================== 数据库配置 ====================
-DATABASE_URL="mysql://ieclub_user:${DB_PASSWORD:-kE7pCg$r@W9nZ!sV2}@127.0.0.1:3306/ieclub"
+DATABASE_URL="mysql://ieclub_user:${DB_PASSWORD:-你的数据库密码}@127.0.0.1:3306/ieclub"
 
 # ==================== Redis 配置 ====================
 REDIS_HOST=${REDIS_HOST:-localhost}
 REDIS_PORT=${REDIS_PORT:-6379}
-REDIS_PASSWORD=${REDIS_PASSWORD:-W24BUwD4vnEcfMpXoMqv}
+REDIS_PASSWORD=${REDIS_PASSWORD:-你的Redis密码}
 REDIS_DB=${REDIS_DB:-0}
 
 # ==================== JWT 配置 ====================
-JWT_SECRET=${JWT_SECRET:-vXroGJ1DzqbM8MreoogKfvdfvdcs12eeb}
+JWT_SECRET=${JWT_SECRET:-你的JWT密钥}
 JWT_EXPIRES_IN=${JWT_EXPIRES_IN:-7d}
-JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET:-EaCp3XnU2Eh5E1H6BoWpdfvdf13evfvf324}
+JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET:-你的JWT刷新密钥}
 JWT_REFRESH_EXPIRES_IN=${JWT_REFRESH_EXPIRES_IN:-30d}
 
 # ==================== 微信小程序配置 ====================
-WECHAT_APPID=${WECHAT_APPID:-wxf6389db55319e51c}
-WECHAT_SECRET=${WECHAT_SECRET:-9dd5bf10a41f1b68b92ba61e4dabbfba}
+WECHAT_APPID=${WECHAT_APPID:-你的微信小程序APPID}
+WECHAT_SECRET=${WECHAT_SECRET:-你的微信小程序SECRET}
 
 # ==================== 阿里云 OSS 配置 ====================
 OSS_REGION=oss-cn-hangzhou
