fix: resolve CI/CD pipeline failures

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,25 +51,25 @@ jobs:
           cache-dependency-path: backend/package-lock.json
 
       - name: 安装依赖
-        working-directory: ./backend
+        working-directory: ./ieclub-backend
         run: npm ci
 
       - name: 代码检查
-        working-directory: ./backend
+        working-directory: ./ieclub-backend
         run: npm run lint
 
       - name: 生成 Prisma Client
-        working-directory: ./backend
+        working-directory: ./ieclub-backend
         run: npm run prisma:generate
 
       - name: 运行数据库迁移
-        working-directory: ./backend
+        working-directory: ./ieclub-backend
         env:
           DATABASE_URL: mysql://root:test_password@localhost:3306/ieclub_test
         run: npm run prisma:migrate
 
       - name: 运行测试
-        working-directory: ./backend
+        working-directory: ./ieclub-backend
         env:
           NODE_ENV: test
           DATABASE_URL: mysql://root:test_password@localhost:3306/ieclub_test
@@ -81,7 +81,7 @@ jobs:
       - name: 上传测试覆盖率报告
         uses: codecov/codecov-action@v3
         with:
-          files: ./backend/coverage/coverage-final.json
+          files: ./ieclub-backend/coverage/coverage-final.json
           flags: backend
           name: backend-coverage
 
@@ -102,19 +102,19 @@ jobs:
           cache-dependency-path: frontend/package-lock.json
 
       - name: 安装依赖
-        working-directory: ./frontend
+        working-directory: ./ieclub-taro
         run: npm ci
 
       - name: 代码检查
-        working-directory: ./frontend
+        working-directory: ./ieclub-taro
         run: npm run lint
 
       - name: 构建微信小程序
-        working-directory: ./frontend
+        working-directory: ./ieclub-taro
         run: npm run build:weapp
 
       - name: 构建H5版本
-        working-directory: ./frontend
+        working-directory: ./ieclub-taro
         run: npm run build:h5
 
       - name: 上传构建产物
@@ -122,7 +122,7 @@ jobs:
         with:
           name: frontend-dist
           path: |
-            frontend/dist
+            ieclub-taro/dist
           retention-days: 7
 
   # Docker镜像构建
@@ -160,7 +160,7 @@ jobs:
       - name: 构建并推送 Docker 镜像
         uses: docker/build-push-action@v4
         with:
-          context: ./backend
+          context: ./ieclub-backend
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
