--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: backend/package-lock.json
+          cache-dependency-path: ieclub-backend/package-lock.json
 
       - name: 安装依赖
         working-directory: ./ieclub-backend
@@ -99,7 +99,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
+          cache-dependency-path: ieclub-taro/package-lock.json
 
       - name: 安装依赖
         working-directory: ./ieclub-taro
@@ -140,10 +140,12 @@ jobs:
 
       - name: 登录 Docker Hub
         if: github.event_name != 'pull_request'
+        id: docker-login
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+        continue-on-error: true
 
       - name: 提取 metadata
         id: meta
@@ -158,10 +160,11 @@ jobs:
             type=sha
 
       - name: 构建并推送 Docker 镜像
+        if: github.event_name != 'pull_request' && steps.docker-login.outcome == 'success'
         uses: docker/build-push-action@v4
         with:
           context: ./ieclub-backend
-          push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
@@ -183,3 +186,4 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        continue-on-error: true
