--- a/ieclub-taro/package.json
+++ b/ieclub-taro/package.json
@@ -43,6 +43,7 @@
 	"devDependencies": {
 		"@babel/core": "^7.23.5",
 		"@babel/preset-react": "^7.23.3",
+		"@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
 		"@tarojs/cli": "4.1.7",
 		"@tarojs/webpack5-runner": "4.1.7",
 		"@types/react": "^18.2.45",
