--- a/ieclub-backend/package.json
+++ b/ieclub-backend/package.json
@@ -50,6 +50,7 @@
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
