--- a/ieclub-backend/package.json
+++ b/ieclub-backend/package.json
@@ -4,8 +4,13 @@
   "description": "IEclub 企业级后端服务 - 专为 Taro 多端应用设计",
   "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon src/server.js",
     "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "migrate": "npx prisma migrate deploy",
+    "migrate:dev": "npx prisma migrate dev",
+    "migrate:reset": "npx prisma migrate reset",
+    "generate": "npx prisma generate",
+    "seed": "node scripts/seed.js",
     "postinstall": "npm run prisma:generate",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
