--- a/ieclub-backend/package.json
+++ b/ieclub-backend/package.json
@@ -42,8 +42,10 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.8.0",
+    "ali-oss": "^6.23.0",
     "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.1.2",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -58,7 +60,8 @@
     "sharp": "^0.34.4",
     "uuid": "^13.0.0",
     "winston": "^3.18.3",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
