--- a/ieclub-taro/docker/nginx.conf
+++ b/ieclub-taro/docker/nginx.conf
@@ -13,6 +13,15 @@ events {
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
+    
+    # 自定义MIME类型
+    location ~* \.woff2$ {
+        add_header Content-Type "font/woff2";
+    }
+    
+    location ~* \.ico$ {
+        add_header Content-Type "image/x-icon";
+    }
 
     # 日志格式
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
@@ -28,6 +37,7 @@ http {
     keepalive_timeout  65;
     types_hash_max_size 2048;
     server_tokens off;
+    more_set_headers "Server: IEClub/2.0";
 
     # Gzip 压缩
     gzip on;
@@ -61,7 +71,6 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
 
         # API 请求代理到后端
         location /api/ {
