--- a/ieclub-backend/ieclub.conf
+++ b/ieclub-backend/ieclub.conf
@@ -80,13 +80,25 @@ server {
         add_header Content-Type text/plain;
     }
 
-    # 前端应用路由（如果部署前端）
+    # 前端应用路由
     location / {
-        # 这里可以配置前端应用的路径
-        # proxy_pass http://frontend_app;
-        # 或者直接返回一个维护页面
-        return 200 "IEClub API Server\n";
-        add_header Content-Type text/plain;
+        root /var/www/ieclub_dev/ieclub-taro/dist/h5;
+        try_files $uri $uri/ /index.html;
+        index index.html;
+        
+        # 缓存静态资源
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            add_header Access-Control-Allow-Origin "*";
+        }
+        
+        # HTML文件不缓存
+        location ~* \.html$ {
+            expires -1;
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+        }
     }
 
     # 错误页面
