--- a/ieclub-taro/package.json
+++ b/ieclub-taro/package.json
@@ -34,7 +34,7 @@
 		"@tarojs/plugin-platform-weapp": "4.1.7",
 		"@tarojs/react": "4.1.7",
 		"@tarojs/runtime": "4.1.7",
-		"@tarojs/taro": "4.1.7",
+		"@tarojs/taro": "^4.1.7",
 		"dayjs": "^1.11.10",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -47,6 +47,7 @@
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
 		"@tarojs/cli": "4.1.7",
 		"@tarojs/webpack5-runner": "4.1.7",
+		"@types/node": "^24.9.1",
 		"@types/prop-types": "^15.7.15",
 		"@types/react": "^18.2.45",
 		"@typescript-eslint/eslint-plugin": "^6.14.0",
