--- a/ieclub-taro/tsconfig.json
+++ b/ieclub-taro/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es2017",
+    "target": "es2018",
     "lib": [
       "dom",
       "dom.iterable",
-      "es6"
+      "es2018"
     ],
-    "types": [],
+    "types": ["node"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
