--- a/ieclub-taro/src/app.json
+++ b/ieclub-taro/src/app.json
@@ -1,14 +1,18 @@
 {
   "pages": [
     "pages/square/index",
-    "pages/notifications/index",
+    "pages/community/index",
+    "pages/activities/index",
     "pages/profile/index",
     "pages/login/index",
-    "pages/search/index",
-    "pages/topics/create/index",
+    "pages/forgot-password/index",
     "pages/topics/detail/index",
+    "pages/topics/create/index",
     "pages/topics/index",
-    "pages/community/index",
+    "pages/activities/detail/index",
+    "pages/activities/create/index",
+    "pages/notifications/index",
+    "pages/search/index",
     "pages/community/profile/index"
   ],
   "window": {
@@ -36,16 +40,12 @@
         "text": "社区"
       },
       {
-        "pagePath": "pages/topics/create/index",
-        "text": "发布"
-      },
-      {
-        "pagePath": "pages/notifications/index",
-        "text": "消息"
+        "pagePath": "pages/activities/index",
+        "text": "活动"
       },
       {
         "pagePath": "pages/profile/index",
-        "text": "主页"
+        "text": "我的"
       }
     ]
   }
