--- a/ieclub-taro/nginx-h5.conf
+++ b/ieclub-taro/nginx-h5.conf
@@ -1,7 +1,7 @@
-# Nginx配置 - IEClub H5前端 (Browser模式)
+# Nginx配置 - IEClub H5前端 (Hash模式)
 # 
-# 🔥 这个配置解决了Browser模式路由在生产环境中的404问题
-# 部署时需要将此配置应用到服务器的Nginx
+# 🔥 Hash模式（如 /#/square）不需要特殊路由配置
+# URL中#后的内容由浏览器处理，服务器只需返回index.html
 
 server {
     listen 80;
