--- a/ieclub-taro/package.json
+++ b/ieclub-taro/package.json
@@ -50,6 +50,7 @@
 		"@types/node": "^24.9.1",
 		"@types/prop-types": "^15.7.15",
 		"@types/react": "^18.2.45",
+		"@types/react-dom": "^18.2.18",
 		"@typescript-eslint/eslint-plugin": "^6.14.0",
 		"@typescript-eslint/parser": "^6.14.0",
 		"babel-preset-taro": "4.1.7",
