--- a/ieclub-taro/tsconfig.json
+++ b/ieclub-taro/tsconfig.json
@@ -6,7 +6,7 @@
       "dom.iterable",
       "es2018"
     ],
-    "typeRoots": ["./node_modules/@types", "./node_modules/@tarojs"],
+    "typeRoots": ["./node_modules/@types"],
     "types": ["node"],
     "allowJs": true,
     "skipLibCheck": true,
