--- a/nginx-production.conf
+++ b/nginx-production.conf
@@ -126,6 +126,19 @@ server {
             access_log off;
         }
         
+        # JS/CSS 文件 - 带哈希的文件可以长期缓存
+        location ~* "\.[0-9a-f]{8}\.(js|css)$" {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            access_log off;
+        }
+        
+        # 不带哈希的 JS/CSS - 短期缓存
+        location ~* \.(js|css)$ {
+            expires 1h;
+            add_header Cache-Control "public, must-revalidate";
+        }
+        
         # 图片资源 - 长期缓存
         location ~* \.(png|jpg|jpeg|gif|ico|svg|webp)$ {
             expires 1y;
