--- a/ieclub-taro/package.json
+++ b/ieclub-taro/package.json
@@ -26,9 +26,10 @@
 		"build:analyze": "npm run analyze"
 	},
 	"dependencies": {
-		"@iconify/iconify": "^3.1.1",
 		"@tarojs/components": "4.1.7",
 		"@tarojs/helper": "4.1.7",
+		"lucide-react": "^0.294.0",
+		"react-router-dom": "^6.26.0",
 		"@tarojs/plugin-framework-react": "4.1.7",
 		"@tarojs/plugin-html": "4.1.7",
 		"@tarojs/plugin-platform-h5": "4.1.7",
@@ -61,7 +62,6 @@
 		"eslint-plugin-import": "^2.32.0",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
-		"rimraf": "^5.0.5",
 		"sass": "^1.69.5",
 		"typescript": "^5.3.3",
 		"webpack": "^5.89.0",
