fix: 浼樺寲 Taro H5 搴旂敤閰嶇疆浠ユ敮鎸?React Router
- 浣跨敤 HashRouter 鏇夸唬 BrowserRouter 浠ユ敮鎸侀潤鎬侀儴缃?- 鍒涘缓鍗犱綅椤甸潰婊¤冻 Taro 閰嶇疆瑕佹眰
- 娣诲姞 Vercel 閮ㄧ讲閰嶇疆鏂囦欢
- 淇 app.js 鍖呰浠ユ弧瓒?Taro 缁勪欢瑕佹眰
- 浼樺寲鏋勫缓閰嶇疆纭繚鐢熶骇鐜姝ｅ父杩愯

--- a/ieclub-taro/package.json
+++ b/ieclub-taro/package.json
@@ -18,6 +18,7 @@
 		"build:h5:prod": "cross-env NODE_ENV=production TARO_APP_BUILD_ENV=production taro build --type h5",
 		"build:weapp:beta": "cross-env NODE_ENV=production TARO_APP_BUILD_ENV=beta taro build --type weapp",
 		"build:h5:beta": "cross-env NODE_ENV=production TARO_APP_BUILD_ENV=beta taro build --type h5",
+		"vercel-build": "npm run build:h5:prod",
 		"lint": "eslint --ext .js,.jsx,.ts,.tsx src",
 		"lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src --fix",
 		"type-check": "tsc --noEmit",
